--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 His knowledge knows no bounds except when it comes to the ever unknowable bounds of Inceptions intracies (nobody knows how the spinning top don't stop).
                 Click the button below to find out more about Donald Glover </p>
                 <div class="padding-bottom-bio-main"></div>
-                <a class="button-discography" href="https://en.wikipedia.org/wiki/Childish_Gambino_discography">Learn More</a>
+                <a class="button-discography" href="https://en.wikipedia.org/wiki/Childish_Gambino_discography" target="_blank" rel="noopener noreferrer">Learn More</a>
             </div>
             <div class="right-grid-item-albums">
                 <h2 class="album-title">Albums</h2>
