styling changes. modified background scrolling, changed grid to flexbox

--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
 </head>
 <body>
     <section class="donald-background" data-image-width="1920" data-image-height="1080">
-        <div class="top-padding-grid-container"></div>
-        <div class="grid-container-introduction">
-            <div class="left-grid-item-title">
+        <div class="top-padding-flex-container"></div>
+        <div class="flex-container-introduction">
+            <div class="left-flex-item-title">
                 <h2 class="left-item-text">The Donald Glover Appreciation Project</h2>
             </div>
-            <div class="centre-grid-item-bio">
+            <div class="centre-flex-item-bio">
                 <h2 class="bio-title">Bio</h2>
                 <p class="bio-main-body">The man has created the fast flowing, liquid cool rhythms from such great albums as Awaken My Love. 
                 His knowledge knows no bounds except when it comes to the ever unknowable bounds of Inceptions intracies (nobody knows how the spinning top don't stop).
                 Click the button below to find out more about Donald Glover </p>
                 <div class="padding-bottom-bio-main"></div>
-                <a class="button-discography" href="https://en.wikipedia.org/wiki/Childish_Gambino_discography" target="_blank" rel="noopener noreferrer">Learn More</a>
+                <div class="container-button-discography">
+                    <a class="button-discography" href="https://en.wikipedia.org/wiki/Childish_Gambino_discography" target="_blank" rel="noopener noreferrer">Learn More</a>
+                </div>
             </div>
-            <div class="right-grid-item-albums">
+            <div class="right-flex-item-albums">
                 <h2 class="album-title">Albums</h2>
                 <ol class="album-list">
                     <li>Camp</li>
@@ -35,13 +37,15 @@
                 </ol>
             </div>
         </div>
-        <div class="bottom-padding-grid-container"></div>
+        <div class="bottom-padding-flex-container"></div>
     </section>    
     <section class="favourite-song-section">
         <div class="flex-container-favourite-song">
             <h2 class="favourite-song-title">An Excuisite Number from a Tantalising Artist</h2>
             <p class="favourite-song-name">Me & Your Mama (Let Me Into Your Heart)</p>
-            <iframe width= 60% height="315" src="https://www.youtube.com/embed/_hZCsgcKa-g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="iframe-container">
+                <iframe class="responsive-mama-video" src="https://www.youtube.com/embed/_hZCsgcKa-g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>    
         </div>
     </section>
     <footer class="donald-footer">
