adjusted font URL HTTPS call to hopefully get the link working

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Childish Gambino Fansite</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
-    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <section class="donald-background" data-image-width="1920" data-image-height="1080">
@@ -19,9 +19,9 @@
             </div>
             <div class="centre-flex-item-bio">
                 <h2 class="bio-title">Bio</h2>
-                <p class="bio-main-body">The man has created the fast flowing, liquid cool rhythms from such great albums as Awaken My Love. 
+                <p class="bio-main-body">The man has created the fast flowing, liquid cool rhythms from such great albums as Awaken, My Love & Because the Internet. 
                 His knowledge knows no bounds except when it comes to the ever unknowable bounds of Inceptions intracies (nobody knows how the spinning top don't stop).
-                Click the button below to find out more about Donald Glover </p>
+                Click the button below to find out more about Donald Glover.</p>
                 <div class="padding-bottom-bio-main"></div>
                 <div class="container-button-discography">
                     <a class="button-discography" href="https://en.wikipedia.org/wiki/Childish_Gambino_discography" target="_blank" rel="noopener noreferrer">Learn More</a>
@@ -41,8 +41,8 @@
     </section>    
     <section class="favourite-song-section">
         <div class="flex-container-favourite-song">
-            <h2 class="favourite-song-title">An Excuisite Number from a Tantalising Artist</h2>
-            <p class="favourite-song-name">Me & Your Mama (Let Me Into Your Heart)</p>
+            <h2 class="favourite-song-title">An Exquisite Number from a Tantalising Artist</h2>
+            <p class="favourite-song-name">Me and Your Mama (Let Me Into Your Heart)</p>
             <div class="iframe-container">
                 <iframe class="responsive-mama-video" src="https://www.youtube.com/embed/_hZCsgcKa-g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>    
