--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Childish Gambino Fansite</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
-    <link href='//fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-    <link href='//fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href='https//fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+    <link href='https//fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <section class="donald-background" data-image-width="1920" data-image-height="1080">
