--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Childish Gambino Fansite</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
-    <link href='//fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-    <link href='//fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
 </head>
 <body>
     <section class="donald-background" data-image-width="1920" data-image-height="1080">
